# rm_suspension

./: CMakeLists.txt  README.md  main.cpp  package.xml
config/: sim.perspective  sim.rviz  sim_param.yaml
include/: Simulation.h  cTypes.h  config.h  cppTypes.h
include/Collision/: Collision.h  CollisionBox.h  CollisionMesh.h  CollisionPlane.h  ContactConstraint.h  ContactImpulse.h  ContactSpringDamper.h
include/Dynamics/: ActuatorModel.h  Chassis.h  DynamicsSimulator.h  FloatingBaseModel.h  SpatialInertia.h  StandardChassis.h  spatial.h
include/Math/: FirstOrderIIRFilter.h  Interpolation.h  MathUtilities.h  orientation_tools.h
include/Utilities/: Controller.h  FakeSuspe.h  Utilities_print.h  filters.h  utilities.h
launch/: run_sim.launch
msg/: JointData.msg  SuspeData.msg
src/: Simulation.cpp
src/Collision/: CollisionBox.cpp  CollisionMesh.cpp  CollisionPlane.cpp  ContactConstraint.cpp  ContactImpulse.cpp  ContactSpringDamper.cpp
src/Dynamics/: Chassis.cpp  DynamicsSimulator.cpp  FloatingBaseModel.cpp
src/Utilities/: Controller.cpp  FakeSuspe.cpp  SegfaultHandler.cpp  Utilities_print.cpp  filters.cpp  utilities.cpp
