<?xml version="1.0"?>
<package format="2">
    <name>rm_suspension</name>
    <version>1.0.0</version>
    <description>The robot_bridge package</description>

    <maintainer email="liaoqiayuan@gmail.com">qiayuan</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>robot_msgs</build_depend>
    <exec_depend>robot_msgs</exec_depend>
    <build_depend>tf</build_depend>
    <exec_depend>tf</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
